@@ -892,7 +892,8 @@ Public CGI Scripts
     <epp:phrase id="cgi/register:title">Register</epp:phrase>
     <epp:phrase id="cgi/register:missing_field"><p>You have not filled in the &quot;<epc:pin name="fieldname"/>&quot; field.</p></epp:phrase>
     <epp:phrase id="cgi/register:email_exists"><p>A user with the email address <tt><epc:pin name="email"/></tt> already exists.</p><p>Rather than register, you should just <a href="reset_password">reset your password</a>.</p></epp:phrase>
-    <epp:phrase id="cgi/register:username_exists"><p>Another user already has the username <tt><epc:pin name="username"/></tt> already exists.</p></epp:phrase>
+    <epp:phrase id="cgi/register:email_denied"><p>Registration not allowed from this email address: <tt><epc:pin name="email"/></tt>.</p></epp:phrase>
+    <epp:phrase id="cgi/register:username_exists"><p>Another user already has the username <tt><epc:pin name="username"/></tt>.</p></epp:phrase>
     <epp:phrase id="cgi/register:created_new_user"><p>You have registered with username <big><strong><tt><epc:pin name="username"/></tt></strong></big>.</p><p>This registration <em>will not</em> be activated until you visit the confirmation URL which has been emailed to <tt><epc:pin name="email"/></tt></p>
 </epp:phrase>
     <epp:phrase id="cgi/register:account">Registration</epp:phrase>
